fix margins and alignment of main container

--- a/css/style.css
+++ b/css/style.css
@@ -53,18 +53,8 @@ button {
 }
 
 /* MAIN STYLES*/
-.main {
-    grid-area: main;
-    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
-    justify-content: center;
-    align-items: center;
-    padding: 50px 100px 50px 100px;
-}
-
 .card {
     border-radius: 5px;
-    /* padding: 1rem; */
-    margin: 10px;
 }
 
 .category {
